<resources>
    <string name="app_name">KotlinViper</string>
    <string name="esplach">ESPLACH</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <!--ERROR DIALOG MESSAGES-->
    <string name="error">ERROR</string>
    <string name="empty_fields">Debes completar los campos del formulario.</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="send_verification">SEND VERIFICATION</string>
    <string name="sign_out">SIGN OUT</string>
</resources>
